SERVER-3645 make count() with a predicate accurate on sharded clusters